<resources>
    <string name="app_name">StoryCheck</string>
    <string name="title_hint">What is the headline of your story?</string>
    <string name="description_hint">Provide a short description.</string>
    <string name="choose_category">Choose story type</string>
    <string name="minimum_chars">Minimum characters required: </string>

    <!-- categories -->
    <string name="accidents">Accidents</string>
    <string name="biography">Biography</string>
    <string name="budget_adoption">Budget</string>
    <string name="court">Courts - Civil Action</string>
    <string name="court_verdict">Courts - Verdict Stories</string>
    <string name="crime">Crime</string>
    <string name="disasters">Disasters</string>
    <string name="features">Features</string>
    <string name="fires">Fires</string>
    <string name="interviews">Interviews</string>
    <string name="meetings">Meetings</string>
    <string name="conferences">News Conferences</string>
    <string name="obituaries">Obituaries</string>
    <string name="profile">Profile</string>
    <string name="speeches">Speeches</string>

    <array name="category_drawables">
        <item>@mipmap/ic_accident</item>
        <item>@mipmap/ic_biography</item>
        <item>@mipmap/ic_budget</item>
        <item>@mipmap/ic_court</item>
        <item>@mipmap/ic_verdict</item>
        <item>@mipmap/ic_crime</item>
        <item>@mipmap/ic_disaster</item>
        <item>@mipmap/ic_featured</item>
        <item>@mipmap/ic_fire</item>
        <item>@mipmap/ic_interview</item>
        <item>@mipmap/ic_conference</item>
        <item>@mipmap/ic_obituary</item>
        <item>@mipmap/ic_biography</item>
        <item>@mipmap/ic_speech</item>
    </array>
    <array name="category_strings">
        <item>@string/accidents</item>
        <item>@string/biography</item>
        <item>@string/budget_adoption</item>
        <item>@string/court</item>
        <item>@string/court_verdict</item>
        <item>@string/crime</item>
        <item>@string/disasters</item>
        <item>@string/features</item>
        <item>@string/fires</item>
        <item>@string/interviews</item>
        <item>@string/conferences</item>
        <item>@string/obituaries</item>
        <item>@string/biography</item>
        <item>@string/speeches</item>
    </array>

    <!-- recyclerview list -->
    <string name="activity_title_demo_d">Draggable</string>
    <string name="activity_title_demo_d_grid">Draggable (Grid Layout)</string>
    <string name="activity_title_demo_d_on_longpress">Drag on Long Press</string>
    <string name="activity_title_demo_s">Swipeable</string>
    <string name="activity_title_demo_s_on_longpress">Swipe on Long Press</string>
    <string name="activity_title_demo_us">Button under swipeable item</string>
    <string name="activity_title_demo_e">Expandable</string>
    <string name="activity_title_demo_ds">Draggable + Swipeable</string>
    <string name="activity_title_demo_eds">Expandable + Draggable + Swipeable</string>
    <string name="activity_title_demo_d_with_section">Draggable with Section</string>
    <string name="activity_title_demo_ed_with_section">Expandable + Draggable with Section</string>
    <string name="activity_title_demo_e_add_remove">Expandable (Add/Remove items)</string>
    <string name="activity_title_demo_e_already_expanded">Expandable (Groups already expanded)</string>
    <string name="activity_title_demo_s_vertical">Swipeable (Vertical)</string>
    <string name="activity_title_demo_s_viewpager">Swipeable with ViewPager</string>
    <string name="activity_title_demo_s_legacy">Swipeable (Legacy)</string>

    <string name="snack_bar_text_item_removed">1 item removed</string>
    <string name="snack_bar_text_group_item_removed">1 group item removed</string>
    <string name="snack_bar_text_child_item_removed">1 child item removed</string>
    <string name="snack_bar_text_button_clicked">Button clicked! (position = %1$d)</string>
    <string name="snack_bar_action_undo">UNDO</string>

    <string name="dialog_message_item_pinned">Item pinned! (position = %1$d)</string>
    <string name="dialog_message_group_item_pinned">Group item pinned! (group = %1$d)</string>
    <string name="dialog_message_child_item_pinned">Child item pinned! (group = %1$d, child = %2$d)</string>
    <string name="path_expand_less">M12 8l-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z</string>

    <string name="uploaded">Uploaded</string>

    <string name="create_post">Create Story</string>
    <string name="edit_post">Edit Story</string>
    <string name="create_post_description">Use the add button to start a new checklist</string>
    <string name="upload_post">Upload story</string>
    <string name="upload_post_description">Use this button to start upload of your created story</string>

    <string name="my_posts">StoryCheck</string>
    <string name="back">Back</string>

    <!-- Tour activity -->
    <string name="button_product_tour">product tour</string>

    <string name="welcom_head_01">Story Checklist</string>
    <string name="welcom_content_01">Capture all the necessary parts of your story</string>
    <string name="welcom_head_02">Synchronize to server</string>
    <string name="welcom_content_02">Send your completed stories to the newsroom</string>
    <string name="welcom_head_03">Work offline</string>
    <string name="welcom_content_03">Create stories without internet connection and upload later</string>
    <string name="welcom_head_04">Media rich stories</string>
    <string name="welcom_content_04">Add pictures, video and audio</string>

    <string name="no_posts">Nothing here</string>
    <string name="no_posts_description">Use the add button to create</string>

    <string name="completed_posts">Completed</string>
    <string name="pending_posts">Current</string>

    <string name="no_checklist_selected">No checklist selected!</string>
    <string name="error_getting_checklists">Error getting checklists</string>
    <string name="no_checklists">No checklists</string>
    <string name="getting_checklists">Getting checklists...</string>

    <string name="saved">Saved!</string>

    <!--Menu -->
    <string name="new_story">New Story</string>
    <string name="help">Help</string>
    <string name="about">About StoryCheck</string>
    <string name="feedback">Give Feedback</string>

    <!--Feedback-->
    <string name="rate_title">Give us your feedback</string>
    <string name="rate_message">We always value feedback to help us improve the application</string>
    <string name="rate_positive">Rate now</string>
    <string name="rate_remind_later">Remind me later</string>
    <string name="rate_never"></string>
</resources>
