<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <item
        android:id="@+id/action_accidents"
        android:icon="@mipmap/ic_accident"
        android:orderInCategory="100"
        android:title="@string/accidents"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_biography"
        android:icon="@mipmap/ic_biography"
        android:orderInCategory="100"
        android:title="@string/biography"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_budget"
        android:icon="@mipmap/ic_budget"
        android:orderInCategory="100"
        android:title="@string/budget_adoption"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_courts"
        android:icon="@mipmap/ic_court"
        android:orderInCategory="100"
        android:title="@string/court"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_verdict"
        android:icon="@mipmap/ic_verdict"
        android:orderInCategory="100"
        android:title="@string/court_verdict"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_crime"
        android:icon="@mipmap/ic_crime"
        android:orderInCategory="100"
        android:title="@string/crime"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_disasters"
        android:icon="@mipmap/ic_disaster"
        android:orderInCategory="100"
        android:title="@string/disasters"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_features"
        android:icon="@mipmap/ic_featured"
        android:orderInCategory="100"
        android:title="@string/features"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_fires"
        android:icon="@mipmap/ic_fire"
        android:orderInCategory="100"
        android:title="@string/fires"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_interview"
        android:icon="@mipmap/ic_interview"
        android:orderInCategory="100"
        android:title="@string/interviews"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_meetings"
        android:icon="@mipmap/ic_meeting"
        android:orderInCategory="100"
        android:title="@string/meetings"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_conference"
        android:icon="@mipmap/ic_conference"
        android:orderInCategory="100"
        android:title="@string/conferences"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_obituary"
        android:icon="@mipmap/ic_obituary"
        android:orderInCategory="100"
        android:title="@string/obituaries"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_speech"
        android:icon="@mipmap/ic_speech"
        android:orderInCategory="100"
        android:title="@string/speeches"
        app:showAsAction="always"/>
</menu>
