<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

    <item
        android:id="@+id/action_recyclerView"
        android:orderInCategory="100"
        android:title=""
        app:showAsAction="always"
        android:icon="@drawable/ic_reorder_black_24dp">
        <menu>
            <item
                android:id="@+id/action_new"
                android:orderInCategory="100"
                android:title="@string/new_story"/>
            <item
                android:id="@+id/action_help"
                android:orderInCategory="100"
                android:title="@string/help"/>
            <item
                android:id="@+id/action_about"
                android:orderInCategory="100"
                android:title="@string/about"/>
            <item
                android:id="@+id/action_feedback"
                android:orderInCategory="100"
                android:title="@string/feedback"/>

        </menu>

    </item>

</menu>
