<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl"
    tools:context=".MainActivity">
    <include
        android:id="@+id/toolbar_layout"
        layout="@layout/progress_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"

        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true">

    </LinearLayout>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:hint="@string/title_hint"
        app:met_iconLeft="@drawable/ic_create_black_24dp"
        app:met_iconPadding="0dp"
        app:met_minBottomTextLines="1"
        android:layout_below="@+id/toolbar_layout"/>


    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edit_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:hint="@string/description_hint"
        app:met_iconLeft="@drawable/ic_description_white_24dp"
        app:met_iconPadding="0dp"
        app:met_minBottomTextLines="1"
        android:layout_below="@+id/edit_title"/>

    <RelativeLayout
        android:id="@+id/category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingRight="0dp"
        android:paddingLeft="15dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edit_description">

        <ImageView
            android:id="@+id/categoryThumb"
            android:layout_width="24dp"
            android:src="@drawable/ic_settings_black_24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_marginRight="10dp"
            android:tint="@color/text_selected"/>

        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/choose_category"
            app:met_floatingLabel="normal"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/categoryThumb"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="center_vertical"
            android:textSize="16sp" />
    </RelativeLayout>

</RelativeLayout>
